# Projet_italien

./: README.md
post/1shocktube/: param.inp  post_shock_tube.py
post/2shuosher/: param.inp  post_shuosher.py  program.x
post/3vortexconv/: param.inp  post_vortex_convection.py
post/4shockvortexint/: param.inp  post_shock_vortex_int.py
post/5TGV/: mesfonction.py  param.inp  post_tgv.py  read_fields.py
release/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt  mod_deriv.mod  mod_filter.mod  mod_fluid.mod  mod_grid.mod  mod_mode.mod
scripts/: clean  clean_and_cmake  clean_and_cmake_debug  setgfortran  setintel
src/: CMakeLists.txt  compute_lad.f90  compute_thermo.f90  deltat_fromCFL.f90  deriv_02_exp.f90  deriv_04_exp.f90  deriv_06_exp.f90  deriv_10_exp.f90  deriv_coeff.f90  derivative.f90  filter_coeff.f90  filter_exp.f90  filter_shock_bogey.f90  filter_shock_jameson.f90  mod_deriv.f90  mod_filter.f90  mod_fluid.f90  mod_grid.f90  mod_mode.f90  mod_precision.f90  mod_time.f90  mod_work.f90  program.f90  rhs_inviscid.f90  rhs_viscous.f90  runge_kutta2.f90  runge_kutta4.f90  runge_kutta6.f90  setup_init_cond.f90  update_dirichbc.f90  update_ghost.f90  update_neumannbc.f90  update_var.f90  write_solution.f90
src/TRASH/: deriv10skew.f90  rhs_inviscid.f90
